@@ -3,8 +3,10 @@ $Id$
 OpenDNSSEC 1.3.0
 
 Bugfixes:
-* Replace tab with white-space when writing to syslog
-* Signer Engine: do not block update command while signing
+* Replace tab with white-space when writing to syslog.
+* Enforcer: Stop import of policy if it is not consistent.
+* Signer Engine: do not block update command while signing.
+
 
 OpenDNSSEC 1.2.0 - 2011-01-13
 
